<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.jibi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.jibi.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.jibi.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_income"
        android:name="com.example.jibi.ui.income.IncomeFragment"
        android:label="@string/menu_income"
        tools:layout="@layout/fragment_income" />
    <fragment
        android:id="@+id/nav_spending"
        android:name="com.example.jibi.ui.spending.spendingFragment"
        android:label="@string/menu_spending"
        tools:layout="@layout/fragment_spending" />
    <fragment
        android:id="@+id/nav_goal"
        android:name="com.example.jibi.ui.goal.goalFragment"
        android:label="@string/menu_goal"
        tools:layout="@layout/fragment_goal" />
    <fragment
        android:id="@+id/nav_warning"
        android:name="com.example.jibi.ui.warning.warningFragment"
        android:label="@string/menu_warning"
        tools:layout="@layout/fragment_warning" />
    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.example.jibi.ui.transactions.TransactionsFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_transactions" />
    <fragment
        android:id="@+id/nav_userdata"
        android:name="com.example.jibi.ui.userdata.UserdataFragment"
        android:label="@string/menu_userdata"
        tools:layout="@layout/fragment_userdata" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.jibi.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>